--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-flask==2.0.1
+Flask==2.2.5
+torch==2.0.1
+transformers==4.33.2
+Pillow==9.5.0
+numpy==1.24.3
+tqdm==4.65.0
+scikit-learn==1.2.2
 tensorflow==2.10.0
-numpy
-pillow
-matplotlib
-scikit-learn
-tqdm
-werkzeug
